# rupy

./: README.md  doctest.sh  setup.cfg  setup.py
.github/workflows/: python-app.yml
rupy/: __init__.py  bitview.py  buf.py  compat.py  fields.py  hexdump.py  pretty.py  ranges.py  seq.py  stream.py
