[metadata]
name = rupy
version = attr: rupy.__version__
author = Jonathan Goren
author_email = jonagn@gmail.com
description = Random useful python stuff 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yyogo/rupy,
license = MIT License,
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Utilities
    Topic :: Security

[options]
packages = rupy

